--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "d3": "^7.0.1",
+    "d3-color": "^3.0.1",
+    "d3-scale-chromatic": "^3.0.0",
     "vega": "^5.21.0",
     "vega-embed": "^6.19.1",
     "vega-lite": "^5.1.1"
